# 8080emu

./: .gitignore  README.md  build.sh  disassembler.cpp
src/: CMakeLists.txt  disassembler.cpp  disassembler.h
test/: decode_test.cpp
